#666 Fixed [Views -> BasicModal] z-index

--- a/app/styles/components/modals/_react-modal.scss
+++ b/app/styles/components/modals/_react-modal.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 2000;
   background: rgba(4, 4, 15, 0.4);
 }
 
